fix for user edit

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,1 @@
-this project created by adhiguna utama sabril and adnan hidayat. copyrighy by codevity.corp
+this project created by adhiguna utama sabril and adnan hidayat. copyrighy by codevity.corp in license of MIT
